--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,14 +8,22 @@ repos:
     -   id: end-of-file-fixer
 
 # isort
-- repo: https://github.com/asottile/seed-isort-config
-  rev: v2.2.0
+# - repo: https://github.com/pre-commit/mirrors-isort
+#   rev: v5.10.1
+#   hooks:
+#   - id: isort
+#     args: ["--profile", "black", "--filter-files"]
+
+# black
+- repo: https://github.com/psf/black
+  rev: 23.3.0
   hooks:
-  - id: seed-isort-config
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v5.10.1
-  hooks:
-  - id: isort
+    - id: black
+      # It is recommended to specify the latest version of Python
+      # supported by your project here, or alternatively use
+      # pre-commit's default_language_version, see
+      # https://pre-commit.com/#top_level-default_language_version
+      language_version: python3.11
 
 # black
 # - repo: https://github.com/ambv/black
